// Generated by github.com/davyxu/tabtoy
// Version: 2.8.10
// DO NOT EDIT!!

package table;


// Defined in table: NameBase
message NameBase
{	
	
	
	repeated TNameDefine TName = 1; // TName

}

// Defined in table: TName
message TNameDefine
{	
	
	
	optional uint32 Id = 1; // id
	
	
	optional string Name = 2; // 名字

}

